fix overflow error on mobile devices

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -674,6 +674,7 @@ footer * {
     margin-left: auto;
     margin-right: auto;
     max-height: 50vh;
+    max-width: 100%;
     box-shadow: var(--shadow) 0 1px 2px 1px;
 }
 
